[gd_scene load_steps=4 format=3 uid="uid://bqkp36x5bief3"]

[ext_resource type="Script" path="res://scenes/menu/menuDebut.gd" id="1_dbs0r"]
[ext_resource type="FontFile" uid="uid://bwqxut1jgmy3d" path="res://fonts/Pixeltype.ttf" id="2_14g0t"]
[ext_resource type="Texture2D" uid="uid://dgt1jeutk2o0r" path="res://Sprite/fond/Menu1.png" id="3_jp8g1"]

[node name="menuDebut" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dbs0r")

[node name="VBoxText" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -960.0
offset_top = 140.0
offset_right = 246.0
offset_bottom = 400.0
grow_horizontal = 2

[node name="Titre" type="Label" parent="VBoxText"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_14g0t")
theme_override_font_sizes/font_size = 250
text = "Aether Trials"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="VBoxText"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_14g0t")
theme_override_font_sizes/font_size = 100
text = "De la terre a l'Ether !"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxButton" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -575.0
offset_top = -120.0
offset_right = -145.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ButtonPlay" type="Button" parent="VBoxButton"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_14g0t")
theme_override_font_sizes/font_size = 100
text = "Jouer"

[node name="ButtonSettings" type="Button" parent="VBoxButton"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_14g0t")
theme_override_font_sizes/font_size = 100
text = "Parametres"

[node name="ButtonQuit" type="Button" parent="VBoxButton"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_14g0t")
theme_override_font_sizes/font_size = 100
text = "Quitter"

[node name="Editeur" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -60.0
offset_right = 230.0
offset_bottom = -10.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_14g0t")
theme_override_font_sizes/font_size = 60
text = "by LDDTM"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Menu1" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(960, 540)
texture = ExtResource("3_jp8g1")

[connection signal="pressed" from="VBoxButton/ButtonPlay" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="VBoxButton/ButtonSettings" to="." method="_on_button_settings_pressed"]
[connection signal="pressed" from="VBoxButton/ButtonQuit" to="." method="_on_button_quit_pressed"]
